--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,28 +13,20 @@ jobs:
       - name: Checkout files
         uses: actions/checkout@v2
 
-      - name: Install doctl for DigitalOcean
-        uses: digitalocean/action-doctl@v2
-        with:
-          # Token you have generated to access the DigitalOcean API
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
       - name: Set up Docker Builder
         uses: docker/setup-buildx-action@v3
 
-      - name: Authenticate with DigitalOcean Container Registry
-        run: doctl registry login --expiry-seconds 180
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push to DigitalOcean Container Registry
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
           push: true
-          # "registry.digitalocean.com/gafalag" - registry endpoint, "gafalag" - your own container registry name
-          # "gafalag-api" - suitable name for your app image
-          tags: |
-            registry.digitalocean.com/gafalag/gafalag-api:latest
-            registry.digitalocean.com/gafalag/gafalag-api:sha-${{ github.sha }}
+          tags: lekitech/gafalag-api:latest
 
   deploy:
     needs: build
@@ -55,8 +47,7 @@ jobs:
           # "gafalag-api" - image name used in build job
           # "gafalag" - your own container registry name
           script: |
-            doctl registry login --expiry-seconds 180
-            docker pull registry.digitalocean.com/gafalag/gafalag-api:latest
+            docker pull lekitech/gafalag-api:latest
             echo "calling shutdown endpoint..."
             curl --silent http://localhost/shutdown || true
             echo "giving healthcheck time to fail..."
@@ -72,7 +63,7 @@ jobs:
               --restart always \
               -p 0.0.0.0:80:8080 \
               --name gafalag-api \
-              registry.digitalocean.com/gafalag/gafalag-api:latest \
+              lekitech/gafalag-api:latest \
               --gafalag.db.url=${{ secrets.DIGITALOCEAN_DB_URL }} \
               --gafalag.db.username=${{ secrets.DIGITALOCEAN_DB_USERNAME }} \
               --gafalag.db.password=${{ secrets.DIGITALOCEAN_DB_PASSWORD }}
